--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
-  <link rel="stylesheet" type="text/css" href="http//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
+  <title>JS4: Victims & Volunteers</title>
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
